--- a/Doe+/Views/index.html
+++ b/Doe+/Views/index.html
@@ -42,8 +42,8 @@
         </div>
     </nav>   
 
-    <section class="container-fluid mt-5">    
-        <img class="img-fundo img-fluid w-100 mt-5 mb-5" src="../assets/images/fundo.jpg"/>             
+    <img class="img-fundo img-fluid w-100 mt-5 mb-5" src="../assets/images/fundo.jpg"/>
+    <section class="container-fluid content mt-5">   
             <article id="sobre" class="" class="mt-5 mb-5">
                 <div class="card text-white bg-vermelho mt-5 mb-5">
                     <div class="card-header text-center"><h1 class="fs-1">O Projeto Doe+</h1></div>
@@ -72,7 +72,7 @@
                     </div>
                   </div>
             </article>
-        
+            
             
             <div id="info"class="mt-5">                
                 <div class="bg-vermelho painel mt-5">
@@ -83,63 +83,63 @@
                     <div class="row">
                         <div class="card-group">
                             <div class="card">
-                              <img class="card-img-top" src="../assets/images/documento.png" alt="Imagem de capa do card">
-                              <div class="card-body">
+                                <img class="card-img-top" src="../assets/images/documento.png" alt="Imagem de capa do card">
+                                <div class="card-body">
                                 <h5 class="card-title">Documento</h5>
                                 <p class="card-text">
                                     Portar documento oficial de identidade com foto (identidade, carteira de trabalho, certificado de reservista ou carteira do conselho profissional).
                                 </p>                               
-                              </div>
+                                </div>
                             </div>
                             <div class="card">
-                              <img class="card-img-top" src="../assets/images/16+.webp" alt="Imagem de capa do card">
-                              <div class="card-body">
+                                <img class="card-img-top" src="../assets/images/16+.webp" alt="Imagem de capa do card">
+                                <div class="card-body">
                                 <h5 class="card-title">Idade</h5>
                                 <p class="card-text">É necessário ter entre 16 (dezesseis) e 69 (sessenta e nove) anos. Menores de 18 (dezoito) anos só podem doar com consentimento formal dos responsáveis.</p>
-                              </div>
-                              
+                                </div>
+                                
                             </div>  
                             <div class="card">
                                 <img class="card-img-top" src="../assets/images/descanso.png" alt="Imagem de capa do card">
                                 <div class="card-body">
-                                  <h5 class="card-title">Descanso</h5>
-                                  <p class="card-text">
-                                      Ter dormido ao menos 6 (seis) horas antes da doação.
-                                  </p>                               
+                                    <h5 class="card-title">Descanso</h5>
+                                    <p class="card-text">
+                                        Ter dormido ao menos 6 (seis) horas antes da doação.
+                                    </p>                               
                                 </div>
-                              </div>           
-                          </div> 
+                                </div>           
+                            </div> 
                     </div>
                     <div class="row">
                         <div class="card-group">
                             <div class="card">
                                 <img class="card-img-top" src="../assets/images/balanca.png" alt="Imagem de capa do card">
                                 <div class="card-body">
-                                  <h5 class="card-title">Peso</h5>
-                                  <p class="card-text">É necessário pesar no mínimo 50kg (cinquenta quilos).</p>
+                                    <h5 class="card-title">Peso</h5>
+                                    <p class="card-text">É necessário pesar no mínimo 50kg (cinquenta quilos).</p>
                                 </div>
-                              </div> 
+                                </div> 
                             <div class="card">
-                              <img class="card-img-top" src="../assets/images/cafe-da-manha.png" alt="Imagem de capa do card">
-                              <div class="card-body">
+                                <img class="card-img-top" src="../assets/images/cafe-da-manha.png" alt="Imagem de capa do card">
+                                <div class="card-body">
                                 <h5 class="card-title">Alimentação</h5>
                                 <p class="card-text">Não estar em jejum. Evitar apenas alimentos gordurosos nas três horas que antecedem a doação.</p>
-                              </div>
+                                </div>
                             </div>  
                             <div class="card">
                                 <img class="card-img-top" src="../assets/images/exameok.png" alt="Imagem de capa do card">
                                 <div class="card-body">
-                                  <h5 class="card-title">Estar bem de saúde</h5>
-                                  <p class="card-text">Não ter doenças ou problemas de saúde.</p>
+                                    <h5 class="card-title">Estar bem de saúde</h5>
+                                    <p class="card-text">Não ter doenças ou problemas de saúde.</p>
                                 </div>
-                              </div>                              
-                          </div>
+                                </div>                              
+                            </div>
                     </div> 
                 </div>          
             </div>
         
             <article id="beneficios" class="mt-5 container">
-                <h2 class="fs-1 mt-5 mb-3">
+                <h2 class="fs-1 mt-5 mb-3 text-center">
                     Confira alguns benefícios de ser um doador
                 </h2>
                 <p class="mt-3">
@@ -150,8 +150,8 @@
                         É um gesto simples que pode fazer uma grande diferença na vida de muitas pessoas. Além de trazer diversos benefícios, além da sensação de bem-estar em ajudar!
                 </p>
 
-                <div class="row text-center mt-5">
-                    <div class="d-flex">
+                <div class="row d-flex mt-5">
+                    <div class="d-flex align-items-center justify-content-center">
                         <div class="p-2 w-100">
                             <img class="img-fluid" src="../assets/images/logo.png" alt="imagem"/>
                         </div>
@@ -166,7 +166,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="d-flex mt-5">
+                    <div class="d-flex mt-3 mb-5 align-items-center justify-content-center">
                         <div class="p-2 w-100">
                             <h2 class="fs-3">Check-up completo gratuito</h2>
                             <p>
