--- a/Doe+/css/style.css
+++ b/Doe+/css/style.css
@@ -5,8 +5,9 @@
         
 }
 
-.img-fundo{
-    background-repeat: repeat-x;
+.img-fundo{    
+    height: 100vh;
+    width: 100vh;
 }
 
 .logo
@@ -46,7 +47,7 @@ footer{
     width: 50%;
 }
 
-body
+.content
 {
     background-image: url("../assets/images/bg-primary.jpg");
     background-repeat: repeat-y;
