ordenação de diretórios e tratamento de imagem

--- a/Doe+/Views/index.html
+++ b/Doe+/Views/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>    
     <!-- NAVBAR -->
-    <nav class="fixed-top navbar navbar-expand-md navbar-dark">
+    <nav class="fixed-top navbar navbar-expand-md navbar-dark mb-5">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <h1 class="m-0"><img class="logo d-block" src="../assets/images/logo.png" alt="Logo da app doe+"></h1>
+                <h1 class="m-0"><img class="logo d-block" src="../assets/logo.png" alt="Logo da app doe+"></h1>
             </a>            
             <button class="navbar-toggler align-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -42,9 +42,11 @@
         </div>
     </nav>   
 
-    <img class="img-fundo img-fluid w-100 mt-5 mb-5" src="../assets/images/fundo.jpg"/>
-    <section class="container-fluid content mt-5">   
-            <article id="sobre" class="" class="mt-5 mb-5">
+    <div class="img-panel mt-5">
+        <img class="img-fluid img-fundo mt-3" src="../assets/background/inicial.png"/>
+    </div>    
+    <section class="container-fluid content p-5">   
+            <article id="sobre" class="" class="mt-5 mb-5 p-5">
                 <div class="card text-white bg-vermelho mt-5 mb-5">
                     <div class="card-header text-center"><h1 class="fs-1">O Projeto Doe+</h1></div>
                     <div class="card-body">
@@ -71,8 +73,7 @@
                       </p>
                     </div>
                   </div>
-            </article>
-            
+            </article>            
             
             <div id="info"class="mt-5">                
                 <div class="bg-vermelho painel mt-5">
@@ -153,7 +154,7 @@
                 <div class="row d-flex mt-5">
                     <div class="d-flex align-items-center justify-content-center">
                         <div class="p-2 w-100">
-                            <img class="img-fluid" src="../assets/images/logo.png" alt="imagem"/>
+                            <img class="img-fluid" src="../assets/logo.png" alt="imagem"/>
                         </div>
                         <div class="p-2 w-100">
                             <h2 class="fs-3">Diminui o risco de câncer</h2>
