--- a/Doe+/css/style.css
+++ b/Doe+/css/style.css
@@ -2,12 +2,21 @@
     background-color: transparent;  
     padding: 0px 20px; 
     background-color: #B43A3A;
+    font-size: 16pt;
         
 }
 
+.img-panel
+{
+    display: flex;
+    justify-content: center; /* Centraliza horizontalmente */
+    align-items: center; /* Centraliza verticalmente */
+}
+
 .img-fundo{    
-    height: 100vh;
-    width: 100vh;
+    
+    height: 95vh; /* 100% da altura da tela */   
+    margin: 0; /* Remova margens padrão */
 }
 
 .logo
@@ -49,7 +58,7 @@ footer{
 
 .content
 {
-    background-image: url("../assets/images/bg-primary.jpg");
+    background-image: url("../assets/background/bg-primary.jpg");
     background-repeat: repeat-y;
     background-size: 100% auto;
 }
