--- a/Doe+/Views/index.html
+++ b/Doe+/Views/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon">
     <title>Doe+</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>    
-    <!-- NAVBAR -->
-    <nav class="fixed-top navbar navbar-expand-md navbar-dark mb-5">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <h1 class="m-0"><img class="logo d-block" src="../assets/logo.png" alt="Logo da app doe+"></h1>
-            </a>            
-            <button class="navbar-toggler align-right" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button> 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">                    
-                    <ul class="navbar-nav align-right">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#sobre">Sobre Doe+</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#info">Seja um doador</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#beneficios">Benefícios</a>
-                        </li>                      
-                        <li class="nav-item">
-                            <button class="btn btn-outline-light rounded-0" type="submit">Entrar</button>
-                        </li>  
-                    </ul>                 
-                </div>    
-        </div>
-    </nav>   
-
+<body>   
+    <header> 
+        <nav class="fixed-top navbar navbar-expand-md navbar-dark mb-5">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <h1 class="m-0"><img class="logo d-block" src="../assets/logo.png" alt="Logo da app doe+"></h1>
+                </a>            
+                <button class="navbar-toggler align-right" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button> 
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">                    
+                        <ul class="navbar-nav align-right">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#sobre">Sobre Doe+</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#info">Seja um doador</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#beneficios">Benefícios</a>
+                            </li>                      
+                            <li class="nav-item">
+                                <a class="btn btn-outline-light rounded-0" href="login.html" type="submit">Entrar</a>
+                            </li>  
+                        </ul>                 
+                    </div>    
+            </div>
+        </nav>   
+    </header>
     <div class="img-panel mt-5">
         <img class="img-fluid img-fundo mt-3" src="../assets/background/inicial.png"/>
     </div>    
