--- a/Doe+/Views/login.html
+++ b/Doe+/Views/login.html
@@ -21,22 +21,22 @@
     </header> 
     <div class="container login-panel">
         <div class="row d-flex ">  
-            <form class="g-3">              
+            <form class="form g-3">              
                 <h2 class="fs-1">Bem-vindo!</h2>
-                <h2 class="fs-3">Insira seus dados para fazer o login</h2>                
-                <div class="col-6 mb-3">                  
-                  <input type="text" class="form-control" id="usuario" placeholder="Usuário">
+                <h2 class="fs-3">Insira seus dados para fazer o login</h2>    
+                <div class="form-floating mt-3 mb-3">
+                    <input type="text" class="form-control" id="floatingInput" placeholder="Informe o usuário">
+                    <label for="floatingInput">Usuário</label>
                 </div>
-                <div class="col-6 mb-3">                  
-                    <input type="password" class="form-control" id="senha" placeholder="Senha">
-                  </div>
-                <div class="col-6 mb-3">  
-                    <a class="link" href="cadastro-doador.html">Cadastre-se</a>
-                </div>
-                <div class="col-6">
-                  <button type="submit" class="btn btn-danger mb-3">Entrar</button>
-                </div>
-              </form>
+                <div class="form-floating">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Digite sua senha">
+                    <label for="floatingPassword">Senha</label>
+                </div>                
+                <a class="link mt-1 mb-3" href="cadastro-doador.html">Não tenho uma conta</a>
+                <div class="mt-3">
+                    <button type="submit" class="col-3 btn btn-danger bg-vermelho mb-3">Entrar</button>
+                </div>                        
+            </form>
         </div>       
     </div>
     <footer class="footer">
