Alteração do texto da div de informações

--- a/Doe+/Views/index.html
+++ b/Doe+/Views/index.html
@@ -43,10 +43,10 @@
         </nav>   
     </header>
     <div class="img-panel mt-5">
-        <img class="img-fluid img-fundo mt-3" src="../assets/background/inicial.png"/>
+        <img class="img-fluid img-fundo" src="../assets/background/inicial.png"/>
     </div>    
     <section class="container-fluid content p-5">   
-            <article id="sobre" class="" class="mt-5 mb-5 p-5">
+            <article id="sobre" class="mb-5">
                 <div class="card text-white bg-vermelho mt-5 mb-5">
                     <div class="card-header text-center"><h1 class="fs-1">O Projeto Doe+</h1></div>
                     <div class="card-body">
@@ -163,11 +163,11 @@
                             </p>
                             <h2 class="fs-3">Melhora o fluxo sanguíneo</h2>
                             <p>
-                                Segundo estudos, as pessoas que doam sangue uma ou duas vezes por ano, têm menos risco de sofrer câncer, devido aos altos níveis de ferro em seu sangue.
+                                Doar sangue nos ajuda a evitar a hipercoagulação e para que o nosso sangue flua com mais facilidade. A hipercoagulação pode gerar à ruptura dos nossos vasos sanguíneos, já que existem agentes que podem fazer coagular o sangue como tabaco, estresse ou excesso de açúcar em nossa dieta.
                             </p>
                         </div>
                     </div>
-                    <div class="d-flex mt-3 mb-5 align-items-center justify-content-center">
+                    <div class="d-flex mt-5 mb-5 align-items-center justify-content-center">
                         <div class="p-2 w-100">
                             <h2 class="fs-3">Check-up completo gratuito</h2>
                             <p>
@@ -182,8 +182,7 @@
                             <img class="img-fluid" src="../assets/images/check-up.png" alt="imagem"/>
                         </div>                        
                     </div>  
-                </div>
-                
+                </div>                
             </article>           
     </section>
 
