--- a/Doe+/Views/cadastro-banco.html
+++ b/Doe+/Views/cadastro-banco.html
@@ -5,11 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon">
-        <title>Login Doe+</title>
+        <title>Cadastro Banco de Sangue</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11">
     </head>
 <body class="content">
     <header>   
@@ -21,31 +20,12 @@
         </nav>   
     </header> 
     <div class="container login-panel">
-        <div class="row d-flex ">  
-            <form class="form g-3">              
-                <h2 class="fs-1">Bem-vindo!</h2>
-                <h2 class="fs-3">Insira seus dados para fazer o login</h2>    
-                <div class="form-floating mt-3 mb-3">
-                    <input type="text" class="form-control" id="floatingInput" placeholder="Informe o usuário">
-                    <label for="floatingInput">Usuário</label>
-                </div>
-                <div class="form-floating">
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Digite sua senha">
-                    <label for="floatingPassword">Senha</label>
-                </div>                
-                <a class="link mt-1 mb-3" onclick="tipoCadastro()">Não tenho uma conta</a>
-                <div class="mt-3">
-                    <button type="submit" class="col-3 btn btn-danger bg-vermelho mb-3">Entrar</button>
-                </div>                        
-            </form>
-        </div>       
+          
     </div>
     <footer class="footer">
         <p class="fs-5 text-center">
             Projeto Doe+, uma iniciativa do coração!
         </p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="../js/login.js"></script>
 </body>
 </html>
