--- a/Doe+/Views/cadastro-banco.html
+++ b/Doe+/Views/cadastro-banco.html
@@ -20,7 +20,29 @@
         </nav>   
     </header> 
     <div class="container login-panel">
-          
+          <div class="row">
+              <div class="col-6">
+                    <form class="form g-3">              
+                        <h2 class="fs-1">Bem-vindo!</h2>
+                        <h2 class="fs-3">Insira seus dados para fazer o login</h2>    
+                        <div class="form-floating mt-3 mb-3">
+                            <input type="text" class="form-control" id="floatingInput" placeholder="Informe o usuário">
+                            <label for="floatingInput">Usuário</label>
+                        </div>
+                        <div class="form-floating">
+                            <input type="password" class="form-control" id="floatingPassword" placeholder="Digite sua senha">
+                            <label for="floatingPassword">Senha</label>
+                        </div>                
+                        <a class="link mt-1 mb-3" onclick="tipoCadastro()">Não tenho uma conta</a>
+                        <div class="mt-3">
+                            <button type="submit" class="col-3 btn btn-danger bg-vermelho mb-3">Entrar</button>
+                        </div>                        
+                    </form>
+                </div>  
+              </div>
+              <div class="col-6"></div>
+              
+          </div>
     </div>
     <footer class="footer">
         <p class="fs-5 text-center">
