--- a/Doe+/Views/cadastro-doador.html
+++ b/Doe+/Views/cadastro-doador.html
@@ -11,21 +11,75 @@
         <link rel="stylesheet" href="../css/style.css">
     </head>
 <body class="content">
-    <header>   
-        <nav class="fixed-top navbar navbar-expand-md navbar-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <h1 class="m-0"><img class="logo d-block" src="../assets/logo.png" alt="Logo da app doe+"></h1>
-                </a> 
-        </nav>   
-    </header> 
-    <div class="container login-panel">
-          
-    </div>
-    <footer class="footer">
-        <p class="fs-5 text-center">
-            Projeto Doe+, uma iniciativa do coração!
-        </p>
-    </footer>
+<header class="mb-5">   
+    <nav class="navbar navbar-expand-md navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+                <h1 class="m-0"><img class="logo d-block" src="../assets/logo.png" alt="Logo da app doe+"></h1>
+            </a> 
+    </nav>   
+</header> 
+<div class="container mt-5">
+    <form class="form">
+        <h2 class="fs-1">Cadastro de Doador</h2>
+        <h2 class="fs-3">Insira seus dados para fazer o cadastro</h2>
+        <div class="row">
+            <div class="col-6">
+                    
+                <div class="form-floating mt-3 mb-3">
+                    <input type="text" class="form-control" id="nomeCompleto">
+                    <label for="nomeCompleto">Nome completo</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="text" maxlength="11" minlength="11" class="form-control" id="cpf">
+                    <label for="cpf">CPF</label>
+                </div>  
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="email">
+                    <label for="email">Email</label>
+                </div>              
+                <div class="form-floating mb-3">
+                    <input type="date" class="form-control" id="dataNascimento">
+                    <label for="dataNascimento">Data de nascimento</label>
+                </div>                
+                <div class="d-flex inline">            
+                    <div class="mb-3 col-6 form-floating">                        
+                        <select class="form-select" id="tipoSanguineo">
+                            <option selected>O+</option>
+                            <option value="A+">A+</option>
+                            <option value="A-">A-</option>
+                            <option value="B+">B+</option>
+                            <option value="B-">B-</option>
+                            <option value="O-">O-</option>
+                            <option value="AB+">AB+</option>
+                            <option value="AB-">AB-</option>
+
+                        </select>
+                        <label for="tipoSanguineo">Tipo sanguíneo</label>
+                    </div>              
+                    <div class="form-floating mb-3 col-6">                        
+                        <input type="number" class="form-control" id="peso">
+                        <label for="peso">Peso</label>
+                    </div>
+                </div>  
+            </div>
+            <div class="col-6">
+               <!-- Endereço completo
+                    CEP, Rua, Numero, Complemento, Bairro, Cidade, UF -->
+
+                <!-- Checklist de doenças acometidas, 
+                    Se já fez uso de drogas injetáveis
+                -->
+
+
+            </div>
+        </div>
+    </form> 
+</div>
+<footer class="footer">
+    <p class="fs-5 text-center">
+        Projeto Doe+, uma iniciativa do coração!
+    </p>
+</footer>
 </body>
 </html>
