--- a/Doe+/Views/cadastro-doador.html
+++ b/Doe+/Views/cadastro-doador.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11">
     </head>
 <body class="content">
 <header class="mb-5">   
@@ -19,7 +20,7 @@
             </a> 
     </nav>   
 </header> 
-<div class="container mt-5">
+<div class="container mt-5" style="flex-grow: 1;">
     <form class="form">
         <h2 class="fs-1">Cadastro de Doador</h2>
         <h2 class="fs-3">Insira seus dados para fazer o cadastro</h2>
@@ -27,17 +28,21 @@
             <div class="col-6">
                     
                 <div class="form-floating mt-3 mb-3">
-                    <input type="text" class="form-control" id="nomeCompleto">
+                    <input type="text" class="form-control" placeholder="Nome Completo" id="nomeCompleto">
                     <label for="nomeCompleto">Nome completo</label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="text" maxlength="11" minlength="11" class="form-control" id="cpf">
+                    <input type="text" maxlength="11" minlength="11" placeholder="CPF" class="form-control" id="cpf">
                     <label for="cpf">CPF</label>
                 </div>  
                 <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="email">
+                    <input type="email" class="form-control" placeholder="Email" id="email">
                     <label for="email">Email</label>
-                </div>              
+                </div>   
+                <div class="form-floating mb-3">
+                    <input type="tel" class="form-control" placeholder="Telefone" id="telefone">
+                    <label for="telefone">Telefone</label>
+                </div>            
                 <div class="form-floating mb-3">
                     <input type="date" class="form-control" id="dataNascimento">
                     <label for="dataNascimento">Data de nascimento</label>
@@ -53,7 +58,6 @@
                             <option value="O-">O-</option>
                             <option value="AB+">AB+</option>
                             <option value="AB-">AB-</option>
-
                         </select>
                         <label for="tipoSanguineo">Tipo sanguíneo</label>
                     </div>              
@@ -64,22 +68,83 @@
                 </div>  
             </div>
             <div class="col-6">
-               <!-- Endereço completo
-                    CEP, Rua, Numero, Complemento, Bairro, Cidade, UF -->
-
-                <!-- Checklist de doenças acometidas, 
-                    Se já fez uso de drogas injetáveis
-                -->
-
-
-            </div>
+                <div class="form-floating mt-3 mb-3">
+                    <input type="text" class="form-control" placeholder="CEP" id="cep">
+                    <label for="cep">CEP</label>
+                </div>
+                <div class="d-flex inline">    
+                    <div class="form-floating mb-3 col-8">                        
+                        <input type="text" class="form-control" placeholder="Cidade" id="cidade">
+                        <label for="cidade">Cidade</label>
+                    </div>        
+                    <div class="mb-3 col-4 form-floating">                        
+                        <select class="form-select" id="UF">
+                            <option selected>SP</option>
+                            <option value="AL">AL</option>
+                            <option value="AP">AP</option>
+                            <option value="AM">AM</option>
+                            <option value="BA">BA</option>
+                            <option value="CE">CE</option>
+                            <option value="DF">DF</option>
+                            <option value="ES">ES</option>
+                            <option value="GO">GO</option>
+                            <option value="MA">MA</option>
+                            <option value="MT">MT</option>
+                            <option value="MS">MS</option>
+                            <option value="MG">MG</option>
+                            <option value="PA">PA</option>
+                            <option value="PB">PB</option>
+                            <option value="PR">PR</option>
+                            <option value="PE">PE</option>
+                            <option value="PI">PI</option>
+                            <option value="RJ">RJ</option>
+                            <option value="RN">RN</option>
+                            <option value="RS">RS</option>
+                            <option value="RO">RO</option>
+                            <option value="RR">RR</option>
+                            <option value="SC">SC</option>
+                            <option value="SE">SE</option>
+                            <option value="TO">TO</option>
+                        </select>
+                        <label for="UF">UF</label>
+                    </div>  
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" placeholder="Bairro" id="bairro">
+                    <label for="bairro">Bairro</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" placeholder="Complemento" id="complemento">
+                    <label for="complemento">Complemento</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" placeholder="Usuário" id="usuario">
+                    <label for="usuario">Usuário</label>
+                </div>
+                <div class="d-flex inline">
+                    <div class="form-floating mb-3 col-6">
+                        <input type="password" class="form-control" placeholder="Senha" id="senha">
+                        <label for="senha">Senha</label>
+                    </div>
+                    <div class="form-floating mb-3 col-6">
+                        <input type="password" class="form-control" placeholder="Repetir Senha" id="resenha">
+                        <label for="resenha">Repetir Senha</label>
+                    </div>
+                </div>
+            </div>     
+            <div class="mt-2" style="text-align: right;">
+                <a class="btn btn-danger bg-vermelho col-3 p-2" onclick="cadastrar()">Cadastrar</a>
+                <!--<button type="submit" onclick="cadastrar()" class="col-3 btn btn-danger p-2 bg-vermelho">Cadastrar</button> -->
+            </div>       
         </div>
     </form> 
 </div>
-<footer class="footer">
-    <p class="fs-5 text-center">
-        Projeto Doe+, uma iniciativa do coração!
-    </p>
-</footer>
+    <footer class="footer">
+        <p class="fs-5 text-center">
+            Projeto Doe+, uma iniciativa do coração!
+        </p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../js/cadastro-doador.js"></script>
 </body>
 </html>
