Modelagem de dados
Modelagem do cadastro de doador e banco de sangue

--- a/Doe+/Views/cadastro-banco.html
+++ b/Doe+/Views/cadastro-banco.html
@@ -103,7 +103,7 @@
                     </div>
                 </div>     
                 <div class="" style="text-align: right;">
-                    <a class="btn btn-danger bg-vermelho col-3 p-2" onclick="cadastrar()">Cadastrar</a>
+                    <a class="btn btn-danger bg-vermelho col-3 p-2" onclick="cadastrarBanco()">Cadastrar</a>
                     <!--<button type="submit" onclick="cadastrar()" class="col-3 btn btn-danger p-2 bg-vermelho">Cadastrar</button> -->
                 </div>       
             </div>
