--- a/Doe+/Views/cadastro-doador.html
+++ b/Doe+/Views/cadastro-doador.html
@@ -118,7 +118,7 @@
                 </div>
             </div>     
             <div class="" style="text-align: right;">
-                <a class="btn btn-danger bg-vermelho col-3 p-2" onclick="cadastrar()">Cadastrar</a>
+                <a class="btn btn-danger bg-vermelho col-3 p-2" onclick="cadastrarDoador()">Cadastrar</a>
                 <!--<button type="submit" onclick="cadastrar()" class="col-3 btn btn-danger p-2 bg-vermelho">Cadastrar</button> -->
             </div>       
         </div>
